# Translation

./: .gitignore  main.py  pyproject.toml
data/: aihub_en_ko_data.py  huggingface_parallel_data.py
inference/inference_provider/: call.py
inference/m2m100/: facebook_m2m_1b.py  facebook_m2m_418m.py
inference/nllb200/: nllb200_600m.py
inference/t5/: t5_base.py
train/: upload_checkpoint.py
train/aya/: aya23_35b.py
train/m2m100/: facebook_m2m_1b.py  facebook_m2m_418m.py
train/nllb200/: nllb200_600m.py
train/t5/: t5_base.py
wandb/: latest-run
wandb/run-20251201_151014-p27p3231/: run-p27p3231.wandb
wandb/run-20251201_151014-p27p3231/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251201_151603-wwi9twnd/files/: wandb-metadata.json
wandb/run-20251201_151942-qj8e8cfw/: run-qj8e8cfw.wandb
wandb/run-20251201_151942-qj8e8cfw/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251201_152409-1d5agabd/: run-1d5agabd.wandb
wandb/run-20251201_152409-1d5agabd/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251201_152854-3e9tyjvn/: run-3e9tyjvn.wandb
wandb/run-20251201_152854-3e9tyjvn/files/: config.yaml  wandb-metadata.json
wandb/run-20251201_152935-ud4mxcu8/: run-ud4mxcu8.wandb
wandb/run-20251201_152935-ud4mxcu8/files/: config.yaml  wandb-metadata.json
wandb/run-20251201_153557-zeakxyuc/: run-zeakxyuc.wandb
wandb/run-20251201_153557-zeakxyuc/files/: wandb-metadata.json
