[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]
